Run tests against javac bits
Signed-off-by: Fred Bricon <fbricon@gmail.com>